=== ongoing ===

=== 0.3.1 ===

- Added help texts to some model fields.

=== 0.3 ===

- Added image field to Event model

=== 0.2.1 ===

- added is_published filtering to cmsplugin

=== 0.2 ===

- added is_published field

=== 0.1 ===

Initial commit