@@ -14,7 +14,7 @@ Pillow==1.7.8
 # Packages needed for running the tests. Needed by contributors.
 # ==============================================================
 factory-boy==1.2.0
-django-libs==0.14
+django-libs
 ipdb==0.7
 Fabric
 mock
